--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--header/NAV-->
     <header>
         <nav>
             <ul>
@@ -21,6 +22,7 @@
             </ul>
         </nav>
     </header>
+    <!--content-->
     <section class=section1>
         <a href="https://amzn.to/32MmHgL">
             <img src="assets/img/1.png" id="imgx"></a>
@@ -379,9 +381,7 @@
             </div>
         </section>
     </section>
-
-    
-
+    <!--footer-->
     <footer>
         <div class="designer">
             <h3>The Design Shop</h3>
@@ -395,7 +395,7 @@
         </div>
         <div class="newsletter">
             <h3>Newsletter</h3>
-            <p><a href="#" >Click here to <span>Subscribe</span>.</a></p>
+            <p><a href="#">Click here to <span>Subscribe</span>.</a></p>
             <p class="italic">Don't worry, we hate spam too</p>
         </div>
         <div class="sm">
@@ -405,7 +405,7 @@
             <a href="www.twitter.com" target="_blank">Twitter</a>
         </div>
     </footer>
-    <p class="copyright">&#169; The Design Shop <span><b>  .</b></span>    The Design Blog </p>
+    <p class="copyright">&#169; The Design Shop <span><b> .</b></span> The Design Blog </p>
 
 
 
